--- a/index.HTML
+++ b/index.HTML
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Helldivers</title>  
   <link rel="stylesheet" href="style.css">
+  <script src="Assets/InsertHtml.js"></script>
 </head>
 <body>
 
@@ -19,7 +20,7 @@
         <li><a href="./page3.HTML">Culture</a></li>
         <li><a>Enemies</a></li>
         <li><a href="./page4.HTML">Bugs</a></li>
-      </ul>
+    </ul>
     </nav>
 
     <article>
