--- a/page4.HTML
+++ b/page4.HTML
@@ -23,10 +23,10 @@
     </nav>
 
     <article>
-      <h1>Types</h1>
+      <p>A belligerent race of sentient insectoid creatures, desperately fighting for more territory to house their innumerable horde. The Bug homeworld is the desert planet of Kepler Prime.</p>
       <table style="width:100%">
         <tr>
-          <th colspan="4">A belligerent race of sentient insectoid creatures, desperately fighting for more territory to house their innumerable horde. The Bug homeworld is the desert planet of Kepler Prime. Enemy types:</th>
+          <th colspan="4">Enemy types:</th>
         </tr>
         <tr>
           <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTimW0QZiVAHJZL54xLT10zxhCjAicyo_Wj05qfDi418NUr0XQMVVN--ecg4WPalonODg&usqp=CAU"><a>scout</a></td>
