--- a/index.HTML
+++ b/index.HTML
@@ -32,6 +32,11 @@
 
   <footer>
     <p>Game by <a href="https://www.arrowheadgamestudios.com/">Arowhead</a>studio</p>
+      <form action="">
+        <p>School project of
+        <input type="button" value="Gyvolgova" onclick='window.open("https://www.gvoz.cz/");' />
+        </p>
+      </form>
   </footer>
 
 </body>
