--- a/page3.HTML
+++ b/page3.HTML
@@ -32,6 +32,7 @@
 
   <footer>
     <p>Game by <a href="https://www.arrowheadgamestudios.com/">Arowhead</a>studio</p>
+    <p>School project of <a href="https://www.gvoz.cz/">Gvoz</a></a></p>
   </footer>
 
 </body>
