--- a/page3.HTML
+++ b/page3.HTML
@@ -32,7 +32,11 @@
 
   <footer>
     <p>Game by <a href="https://www.arrowheadgamestudios.com/">Arowhead</a>studio</p>
-    <p>School project of <a href="https://www.gvoz.cz/">Gvoz</a></a></p>
+    <form action="">
+      <p>School project of
+      <input type="button" value="Gyvolgova" onclick='window.open("https://www.gvoz.cz/");' />
+      </p>
+    </form>
   </footer>
 
 </body>
